# itsyhome-windows

./: .gitignore  CHANGELOG.md  README.md  build-release.bat  dev-test.bat  electron-builder.json  electron.vite.config.ts  package-lock.json  package.json  start-dev.bat  tsconfig.json  vite.config.ts
scripts/: dev.cjs  gen-icon.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  notification.rs  refresh.rs  state.rs  store.rs  types.rs
src-tauri/src/ha/: client.rs  mapper.rs  mod.rs  models.rs
src/lib/: api.ts
src/main/: index.ts
src/main/ha/: client.ts  entity-mapper.ts  models.ts
src/main/ipc/: handlers.ts
src/main/store/: store.ts
src/preload/: popup.ts  settings.ts
src/renderer/popup/: entities.ts  index.html  main.ts  sections.ts  style.css
src/renderer/settings/: index.html  main.ts  style.css
src/shared/: roomIcons.ts  types.ts
